--- a/contacto.html
+++ b/contacto.html
@@ -101,8 +101,8 @@
                                     
                                     <div class="col-sm-6">Mandanos la cotización al email</div>
                                     <div class="col-sm-6">
-                                      <a href="mailto://luarte@email.com">
-                                        luarte@email.com
+                                      <a href="mailto://luartevidrios@yahoo.com">
+                                        luartevidrios@yahoo.com
                                       </a>
                                     </div>
 
