Actualización pagina servicio

--- a/servicios.html
+++ b/servicios.html
@@ -86,13 +86,10 @@
 
                         <div class="row">
                           <div class="col-md-7">
-                            <h2 class="service-heading">Fabricación de estructura para el hogar y oficinas.</h2>
-                            <p class="lead">
-                              Contenido
-                            </p>
+                            <h2 class="service-heading">Fabricación de ventanas, puertas y portones para las necesidades del hogar.</h2>                            
                           </div>
                           <div class="col-md-5">
-                            imagen
+                            <img src="assets/img/ventana.png" class="servicio">
                           </div>                          
                         </div>
                         
@@ -100,26 +97,21 @@
                         
                         <div class="row">
                           <div class="col-md-5">
-                            imagen
+                            <img src="assets/img/separador.jpg"  class="servicio">
                           </div>
                           <div class="col-md-7">
-                            <h2 class="service-heading">Fabricación de estructura para el hogar y oficinas.</h2>
-                            <p class="lead">
-                              Contenido
-                            </p>
+                            <h2 class="service-heading">Divisiones para la creación de espacios en oficinas.                              
+                            </h2>                            
                         </div>
 
                         <hr class="service-divider">
 
                         <div class="row">
                           <div class="col-md-7">
-                            <h2 class="service-heading">Fabricación de estructura para el hogar y oficinas.</h2>
-                            <p class="lead">
-                              Contenido
-                            </p>
+                            <h2 class="service-heading">Ventas de cristales y espejos a la medida.</h2>                            
                           </div>
                           <div class="col-md-5">
-                            imagen
+                            <img src="assets/img/vidrios.jpg"  class="servicio">
                           </div>                          
                         </div>
 
