--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                             <img src="assets/img/logo.png" class="rounded">
                         </h1>
 
-                        <p>
-                            
+
+                        <p class="home">
+                            Entregamos el mejor servicio y orientación personalizado para el mejoramiento de su casa o oficina, en confección de ventanas, puertas y tabiquería.
                         </p>
 
                     </div>
